Added json object result type to package